# STAPLE

./: .gitignore  CMakeLists.txt  copy-pyd.bat  staple_wrapper.cpp  test.py
src/: staple_tracker.cpp  staple_tracker.hpp
